# event-publisher

./: meson.build
src/: redfish_event.cpp
subprojects/: bmcweb.wrap  gtest.wrap
